Update controller, view and modules to include languages model

--- a/index.html
+++ b/index.html
@@ -18,11 +18,16 @@
   <script src="app/modules/techniques/module.js"></script>
   <script src="app/modules/techniques/model.js"></script>
 
+  <!-- Languages -->
+  <script src="app/modules/languages/module.js"></script>
+  <script src="app/modules/languages/model.js"></script>
+
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
 </head>
 <body>
   <div class="container">
     <h1>Tech Radar</h1>
+    
     <div ng-view></div>
   </div>
 </body>
