Refactor various models into a single model

--- a/index.html
+++ b/index.html
@@ -12,22 +12,21 @@
 
   <!-- Radar -->
   <script src="app/modules/radar/module.js"></script>
+  <script src="app/modules/radar/model.js"></script>
   <script src="app/modules/radar/controller.js"></script>
 
   <!-- Techniques -->
   <script src="app/modules/techniques/module.js"></script>
-  <script src="app/modules/techniques/model.js"></script>
 
   <!-- Languages -->
   <script src="app/modules/languages/module.js"></script>
-  <script src="app/modules/languages/model.js"></script>
 
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
 </head>
 <body>
   <div class="container">
     <h1>Tech Radar</h1>
-    
+
     <div ng-view></div>
   </div>
 </body>
