--- a/index.html
+++ b/index.html
@@ -2,6 +2,21 @@
 <html lang="en" ng-app="techRadar">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="icon" href="app/images/glyphicons_185_screenshot.png">
+
+  <!-- Custom styles for this template -->
+  <link href="app/styles/starter-template.css" rel="stylesheet">
+
+  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
+
   <title>Tech Radar App</title>
 
   <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -24,9 +39,32 @@
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Tech Radar</h1>
+  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#" style="color:#ddd">
+          <span class="glyphicon glyphicon-screenshot" style="color:#ccc"></span>
+          Tech Radar
+        </a>
+      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="#">Techniques</a></li>
+          <li><a href="#">Tools</a></li>
+          <li><a href="#">Platforms</a></li>
+          <li><a href="#">Languages & Frameworks</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
+  <div class="container">
     <div ng-view></div>
   </div>
 </body>
