--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
   <!-- Languages -->
   <script src="app/modules/languages/module.js"></script>
+  <script src="app/modules/languages/controller.js"></script>
+
 
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
 </head>
@@ -61,7 +63,7 @@
           <li><a ng-href="/#/techniques">Techniques</a></li>
           <li><a href="#/tools">Tools</a></li>
           <li><a href="#/platforms">Platforms</a></li>
-          <li><a href="#/languages">Languages & Frameworks</a></li>
+          <li><a ng-href="#/languages">Languages & Frameworks</a></li>
         </ul>
       </div>
     </div>
