Add controller for form, to save new records using POST

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <!-- Techniques -->
   <script src="app/modules/techniques/module.js"></script>
   <script src="app/modules/techniques/controller.js"></script>
+  <script src="app/modules/techniques/controller-form.js"></script>
 
   <!-- Languages -->
   <script src="app/modules/languages/module.js"></script>
